chat - MISSING CODES

--- a/views/user/chat.handlebars
+++ b/views/user/chat.handlebars
@@ -7,12 +7,19 @@
         <div class="inbox_people">
             <div class="headind_srch">
                 <div class="recent_heading">
-                    <a href="/inbox/0">
-                        <u>
-                            <h4>Recent</h4>
-                        </u>
-                    </a> | <a href="/archive/0">
-                        <h4>Archives</h4>
+                    <a href="/c/inbox/0">
+                        {{#ifCond chatstatus '==' "inbox"}}
+                        <u><h4>Recent</h4></u>
+                        {{else}}
+                        <h4>Recent</h4>
+                        {{/ifCond}}
+                    </a> | 
+                    <a href="/c/archive/0">
+                        {{#ifCond chatstatus '==' "archive"}}
+                            <u><h4>Archives</h4></u>
+                        {{else}}
+                            <h4>Archives</h4>
+                        {{/ifCond}}
                     </a>
                 </div>
                 <div class="srch_bar">
@@ -30,8 +37,23 @@
                     {{#ifCond id '==' ../id}}
                     <div class="chat_list active_chat">
                         <div class="chat_people">
-                            <div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil">
-                            </div>
+                            {{#ifCond ../currentuser "==" recipient}}
+                                {{#each ../photodetails}}
+                                {{#if (eq ../sender username) }}
+                                <div class="chat_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
+                                {{else if (eq ../sender shopname)}}
+                                <div class="chat_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
+                                {{/if}}
+                                {{/each}}
+                            {{else}}
+                                {{#each ../photodetails}}
+                                {{#if (eq ../recipient username) }}
+                                <div class="chat_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
+                                {{else if (eq ../recipient shopname)}}
+                                <div class="chat_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
+                                {{/if}}
+                                {{/each}}
+                            {{/ifCond}}
                             <div class="chat_ib">
                                 <h5>{{#ifCond ../currentuser "==" recipient}}{{sender}}{{else}}{{recipient}}{{/ifCond}}</h5>
                                 <p id="messagePreview">
@@ -39,7 +61,11 @@
                                         {{#ifCond message "==" 0}}
                                             <i>This chat is currently empty.</i>
                                         {{else}}
+                                            {{#checklength message 70}}
+                                            {{subString message}}...
+                                            {{else}}
                                             {{message}}
+                                            {{/checklength}}
                                         {{/ifCond}}
                                     {{else}}
                                         <i>Sent an attachment</i>
@@ -49,18 +75,37 @@
                         </div>
                     </div>
                     {{else}}
-                    <a href="/inbox/{{id}}">
+                    <a href="/c/{{../chatstatus}}/{{id}}">
                         <div class="chat_list">
                             <div class="chat_people">
-                                <div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil">
-                                </div>
+                                {{#ifCond ../currentuser "==" recipient}}
+                                    {{#each ../photodetails}}
+                                    {{#if (eq ../sender username) }}
+                                    <div class="chat_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
+                                    {{else if (eq ../sender shopname)}}
+                                    <div class="chat_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
+                                    {{/if}}
+                                    {{/each}}
+                                {{else}}
+                                    {{#each ../photodetails}}
+                                    {{#if (eq ../recipient username) }}
+                                    <div class="chat_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
+                                    {{else if (eq ../recipient shopname)}}
+                                    <div class="chat_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
+                                    {{/if}}
+                                    {{/each}}
+                                {{/ifCond}}
                                 <div class="chat_ib">
-                                    <h5>{{#ifCond currentuser "==" recipient}}{{sender}}{{else}}{{recipient}}{{/ifCond}}</h5>
+                                    <h5>{{#ifCond ../currentuser "==" recipient}}{{sender}}{{else}}{{recipient}}{{/ifCond}}</h5>
                                     <p>{{#ifCond message "!=" null}}
                                             {{#ifCond message "==" 0}}
                                                 <i>This chat is currently empty.</i>
                                             {{else}}
+                                                {{#checklength message 70}}
+                                                {{subString message}}...
+                                                {{else}}
                                                 {{message}}
+                                                {{/checklength}}
                                             {{/ifCond}}
                                         {{else}}
                                             <i>Sent an attachment</i>
@@ -82,9 +127,10 @@
             <div class="heading_msg">
                 <b>{{recipient}}</b>
 
-                <a href="/chat/archive/2" title="Mark as archive" style="float: right;"><i class="fa fa-archive"></i>
+                {{#ifCond chatstatus '!=' "archive"}}
+                <a href="/archive/{{id}}" title="Mark as archive" style="float: right;"><i class="fa fa-archive"></i>
                     Archive</a>
-
+                {{/ifCond}}
 
 
                 <form action="/inbox/delete/{{id}}" method="POST" style="display: inline-block; float: right;">
@@ -123,7 +169,7 @@
 
             <div class="msg_history" id="msg_history">
                 <br>
-                <div class="incoming_msg">
+                <!--<div class="incoming_msg">
                     <div class="incoming_msg_img"> <img src="https://ptetutorials.com/images/user-profile.png"
                             alt="sunil"> </div>
                     <div class="received_msg">
@@ -133,7 +179,7 @@
                             <span class="time_date"> 18 May 2021 11:41 | Merlion Tailor</span>
                         </div>
                     </div>
-                </div>
+                </div>-->
                 {{#each messages}}
                 {{#if message}}
                 {{#ifCond sentby '==' ../currentuser}}
@@ -147,8 +193,13 @@
                 {{else}}
                 <!-- Right/Sent msg if sender == current user-->
                 <div class="incoming_msg">
-                    <div class="incoming_msg_img"> <img src="https://ptetutorials.com/images/user-profile.png"
-                            alt="sunil"> </div>
+                    {{#each ../photodetails}}
+                    {{#if (eq ../../recipient username) }}
+                    <div class="incoming_msg_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
+                    {{else if (eq ../../recipient shopname)}}
+                    <div class="incoming_msg_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
+                    {{/if}}
+                    {{/each}}
                     <div class="received_msg">
                         <div class="received_withd_msg">
                             <p>{{message}}</p>
@@ -169,8 +220,13 @@
                 </div>
                 {{else}}
                 <div class="incoming_msg">
-                    <div class="incoming_msg_img"> <img src="https://ptetutorials.com/images/user-profile.png"
-                            alt="sunil"> </div>
+                    {{#each ../photodetails}}
+                    {{#if (eq ../../recipient username) }}
+                    <div class="incoming_msg_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
+                    {{else if (eq ../../recipient shopname)}}
+                    <div class="incoming_msg_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
+                    {{/if}}
+                    {{/each}}
                     <div class="received_msg">
                         <div class="received_withd_msg">
                             <p><img id="myImg" src="/uploads/chat/{{upload}}" width="200px" height="auto"
@@ -186,13 +242,13 @@
 
 
 
-                <div class="outgoing_msg">
+                <!--<div class="outgoing_msg">
                     <div class="sent_msg">
                         <p><audio controls="" id="audioPlayer" src="/testdata.oga" type="audio/oga">Your browser does
                                 not support the audio element.</audio></p>
                         <span class="time_date"> 18 May 2021 12:11 | me</span>
                     </div>
-                </div>
+                </div>-->
             </div>
             <div class="type_msg">
                 <div class="input_msg_write">
@@ -324,12 +380,19 @@
 <div class="inbox_people_mobile">
             <div class="headind_srch">
                 <div class="recent_heading">
-                    <a href="/inbox/0">
-                        <u>
-                            <h4>Recent</h4>
-                        </u>
-                    </a> | <a href="/archive/0">
-                        <h4>Archives</h4>
+                    <a href="/c/inbox/0">
+                        {{#ifCond chatstatus '==' "inbox"}}
+                        <u><h4>Recent</h4></u>
+                        {{else}}
+                        <h4>Recent</h4>
+                        {{/ifCond}}
+                    </a> | 
+                    <a href="/c/archive/0">
+                        {{#ifCond chatstatus '==' "archive"}}
+                            <u><h4>Archives</h4></u>
+                        {{else}}
+                            <h4>Archives</h4>
+                        {{/ifCond}}
                     </a>
                 </div>
                 <div class="srch_bar">
@@ -347,8 +410,23 @@
                     {{#ifCond id '==' ../id}}
                     <div class="chat_list active_chat">
                         <div class="chat_people">
-                            <div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil">
-                            </div>
+                            {{#ifCond ../currentuser "==" recipient}}
+                                {{#each ../photodetails}}
+                                {{#if (eq ../sender username) }}
+                                <div class="chat_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
+                                {{else if (eq ../sender shopname)}}
+                                <div class="chat_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
+                                {{/if}}
+                                {{/each}}
+                            {{else}}
+                                {{#each ../photodetails}}
+                                {{#if (eq ../recipient username) }}
+                                <div class="chat_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
+                                {{else if (eq ../recipient shopname)}}
+                                <div class="chat_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
+                                {{/if}}
+                                {{/each}}
+                            {{/ifCond}}
                             <div class="chat_ib">
                                 <h5>{{#ifCond ../currentuser "==" recipient}}{{sender}}{{else}}{{recipient}}{{/ifCond}}</h5>
                                 <p id="messagePreview">
@@ -356,7 +434,11 @@
                                         {{#ifCond message "==" 0}}
                                             <i>This chat is currently empty.</i>
                                         {{else}}
+                                            {{#checklength message 70}}
+                                            {{subString message}}...
+                                            {{else}}
                                             {{message}}
+                                            {{/checklength}}
                                         {{/ifCond}}
                                     {{else}}
                                         <i>Sent an attachment</i>
@@ -366,18 +448,37 @@
                         </div>
                     </div>
                     {{else}}
-                    <a href="/inbox/{{id}}">
+                    <a href="/c/{{../chatstatus}}/{{id}}">
                         <div class="chat_list">
                             <div class="chat_people">
-                                <div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil">
-                                </div>
+                                {{#ifCond ../currentuser "==" recipient}}
+                                    {{#each ../photodetails}}
+                                    {{#if (eq ../sender username) }}
+                                    <div class="chat_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
+                                    {{else if (eq ../sender shopname)}}
+                                    <div class="chat_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
+                                    {{/if}}
+                                    {{/each}}
+                                {{else}}
+                                    {{#each ../photodetails}}
+                                    {{#if (eq ../recipient username) }}
+                                    <div class="chat_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
+                                    {{else if (eq ../recipient shopname)}}
+                                    <div class="chat_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
+                                    {{/if}}
+                                    {{/each}}
+                                {{/ifCond}}
                                 <div class="chat_ib">
-                                    <h5>{{#ifCond currentuser "==" recipient}}{{sender}}{{else}}{{recipient}}{{/ifCond}}</h5>
+                                    <h5>{{#ifCond ../currentuser "==" recipient}}{{sender}}{{else}}{{recipient}}{{/ifCond}}</h5>
                                     <p>{{#ifCond message "!=" null}}
                                             {{#ifCond message "==" 0}}
                                                 <i>This chat is currently empty.</i>
                                             {{else}}
+                                                {{#checklength message 70}}
+                                                {{subString message}}...
+                                                {{else}}
                                                 {{message}}
+                                                {{/checklength}}
                                             {{/ifCond}}
                                         {{else}}
                                             <i>Sent an attachment</i>
@@ -425,6 +526,7 @@
 
     //////////////////////// Socket IO ////////////////////////////////
     var io = io();
+    var rphoto = {{{json rphoto}}};
 
     io.on("user_connected", function (username) {
         var html = "";
@@ -471,7 +573,7 @@
             console.log("new_message is working");
             const div = document.createElement('div');
             div.className = 'incoming_msg';
-            div.innerHTML = `<div class="incoming_msg_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil"> </div>
+            div.innerHTML = `<div class="incoming_msg_img"> <img src="/uploads/user/${rphoto}" style="border-radius: 50%;"> </div>
                             <div class="received_msg">
                                 <div class="received_withd_msg">
                                     <p>${data.message}</p>
