fix to img upload bar

--- a/views/tailor/addproduct.handlebars
+++ b/views/tailor/addproduct.handlebars
@@ -45,7 +45,7 @@
                                     </div>
                                     <div id="response" class="hidden">
                                     <div id="messages"></div>
-                                    <progress class="progress" id="file-progress" value="1">
+                                    <progress class="progress" id="file-progresss" value="1">
                                         <span>100</span>%
                                     </progress>
                                     </div>
