--- a/views/customer/custacct.handlebars
+++ b/views/customer/custacct.handlebars
@@ -202,7 +202,7 @@
                     </div>
                     <div class="panel panel-default single-my-account">
                         <div class="panel-heading my-account-title">
-                            <h3 class="panel-title"><span>4 .</span> <a href="/Corder_History">My Orders </a></h3>
+                            <h3 class="panel-title"><span>4 .</span> <a href="/purchasehistory">My Orders </a></h3>
                         </div>
                     </div>
                     <div class="panel panel-default single-my-account">
