--- a/views/tailor/adddeal.handlebars
+++ b/views/tailor/adddeal.handlebars
@@ -1,3 +1,10 @@
+<!--For Bootstrap datepicker-->
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT" crossorigin="anonymous">
+    </script>
+<link href="https://unpkg.com/gijgo@1.9.11/css/gijgo.min.css" rel="stylesheet" type="text/css" />
+<script src="https://unpkg.com/gijgo@1.9.11/js/gijgo.min.js" type="text/javascript"></script>
+
 <div class="login-register-area pt-100 pb-100">
     <div class="container">
         <div class="row">
@@ -10,35 +17,55 @@
                     </div>
                     <div id="lg2" class="tab-pane">
                         <div class="login-form-container">
-                            <div class="login-register-form">
-                                <form action="#" method="post">
-                                    {{#each shopprod}}
-                                    <br>ID: {{id}}<!-- Good to use my catalouge id as a foriegn key--> Product Name: {{name}}   Price: {{price}}     Image <img src="/uploads/products/{{image}}" width="50" height="auto">
-                                    {{/each}}
-                                    <div class="form-group">
-                                        <label for="name">Product Name</label>
-                                        <input id="pname" name="pname" class="form-control" type="text" value="" >
-                                    </div>
+                            <div class="billing-info-wrap">
+                                <div class="row">
+                                    <div class="col-lg-12">
+                                        <form action="#" method="post">
 
-                                    <div class="form-group">
-                                        <label for="name">Discounted Price ($)</label>
-                                        <input id="discountp" name="discountp" class="form-control" type="text" value="" >
-                                    </div>
+                                    {{!-- <br>ID: {{id}}
+                                    <!-- Good to use my catalouge id as a foriegn key--> Product Name: {{name}} Price:
+                                    {{price}} Image <img src="/uploads/products/{{image}}" width="50" height="auto"> --}}
 
-                                    <div class="form-group">
-                                        <label for="name">Start Date (DD/MM/YYYY)</label>
-                                        <input id="dstartdate" name="dstartdate" class="form-control" type="text" value="" >
+                                    <div class="billing-info mb-20">
+                                        <label for="name">Product Name<span style="color: red;">*</span></label>
+                                        <select id="pname" name="pname" class="form-control" type="text" value="" required >
+                                            {{#each shopprod}}
+                                            <option value="{{id}}">{{name}}</option>
+                                            {{/each}}
+                                        </select>
+                                    <br>
                                     </div>
-
-                                    <div class="form-group">
-                                        <label for="name">End Date (DD/MM/YYYY)</label>
-                                        <input id="dexpirydate" name="dexpirydate" class="form-control" type="text" value="" >
+                                    <div class="billing-info mb-20">
+                                        <label for="name">Discounted Price ($)<span style="color: red;">*</span></label>
+                                        <input id="discountp" name="discountp" class="form-control" type="text"
+                                            value="" required>
                                     </div>
-
+                                    <br>
+                                    <label for="event">Event<span style="color: red;">*</span></label>
+                                    <div class="checkout-account">
+                                        <input type="checkbox">
+                                        <span>EVENT ONE</span>
+                                    </div>
+                                    <div>EVENT ONE Description</div>
+                                    <br>
+                                    <div class="checkout-account">
+                                        <input type="checkbox">
+                                        <span>EVENT TWO</span>
+                                    </div>
+                                    <div>EVENT TWO Description</div>
+                                    <br>
+                                    <div class="checkout-account">
+                                        <input type="checkbox">
+                                        <span>EVENT THREE</span>
+                                    </div>
+                                    <div>EVENT THREE Description</div>
+                                    <br><br>
                                     <div class="button-box">
-                                        <button type="submit"><span>Confirm</span></button>
+                                        <button type="submit" class="btn btn-outline-info"
+                                            style="font-size: 14px; font-weight: 420; padding-top: 8px; padding-bottom: 8px;padding-left: 28px; padding-right: 28px"><span>Confirm</span></button>
                                     </div>
                                 </form>
+                                
                             </div>
                         </div>
                     </div>
@@ -47,3 +74,15 @@
         </div>
     </div>
 </div>
+<script>
+    $('#datepicker').datepicker({
+        format: 'dd/mm/yyyy',
+        value: new Date().toLocaleDateString('EN-SG'),
+        uiLibrary: 'bootstrap4',
+    });
+    $('#datepicker2').datepicker({
+        format: 'dd/mm/yyyy',
+        value: new Date().toLocaleDateString('EN-SG'),
+        uiLibrary: 'bootstrap4',
+    });
+</script>
