--- a/views/tailor/tailordeals.handlebars
+++ b/views/tailor/tailordeals.handlebars
@@ -10,7 +10,6 @@
               <tr>
                 <th>Product</th>
                 <th>Discounted Price</th>
-                <th>Original Price</th>
                 <th>Start Date</th>
                 <th>End Date</th>
                 <th>Action</th>
@@ -19,11 +18,14 @@
             <tbody></tbody>
             <tr>
               {{#each deals}}
-              <td class="product-name">{{pname}}</td>
+                {{#each ../shopprod}}
+                {{#ifCond id '==' ../catid}}
+                <td class="product-name">{{name}}</td>
+                {{/ifCond}}
+                {{/each}}
               <td class="product-discountp">${{discountp}}</td>
-              <td class="product-discountp">${{originalp}}</td>
-              <td class="product-start_date">{{dstartdate}}</td>
-              <td class="product-end_date">{{dexpirydate}}</td>
+              <td class="product-start_date">{{formatDate dstartdate 'DD MMM YYYY'}}</td>
+              <td class="product-end_date">{{formatDate dexpirydate 'DD MMM YYYY'}}</td>
               <td class="product-remove">
                 <a href="updatedeal/{{id}}"><i class="fa fa-pencil"></i></a>
                 <form action="#" method="POST" style="display: inline-block;">
@@ -70,7 +72,7 @@
       <div class="col-lg-12">
         <div class="cart-shiping-update-wrapper" style="float:right;">
           <div class="cart-clear">
-            <a href="adddeal">Add Item</a>
+            <a href="adddeal">Add Deal</a>
           </div>
         </div>
       </div>
