--- a/views/tailor/updatedeal.handlebars
+++ b/views/tailor/updatedeal.handlebars
@@ -1,3 +1,10 @@
+<!--For Bootstrap datepicker-->
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT" crossorigin="anonymous">
+    </script>
+<link href="https://unpkg.com/gijgo@1.9.11/css/gijgo.min.css" rel="stylesheet" type="text/css" />
+<script src="https://unpkg.com/gijgo@1.9.11/js/gijgo.min.js" type="text/javascript"></script>
+
 <div class="login-register-area pt-100 pb-100">
     <div class="container">
         <div class="row">
@@ -10,37 +17,52 @@
                     </div>
                     <div id="lg2" class="tab-pane">
                         <div class="login-form-container">
-                            <div class="login-register-form">
-                                <form action="/tailor/updatedeal/{{deals.id}}?_method=PUT" method="post" id="updatedeal">
-                                    <div class="form-group">
-                                        <label for="name">Product Name</label>
-                                        <input id="pname" name="pname" class="form-control" type="text" value="{{deals.pname}}" >
+                            <div class="billing-info-wrap">
+                                <div class="row">
+                                    <div class="col-lg-12">
+                                        <form action="/tailor/updatedeal/{{deals.id}}?_method=PUT" method="post"
+                                            id="updatedeal">
+                                            {{!-- <div class="form-group">
+                                                <label for="name">Product Name</label>
+                                                <select id="pname" name="pname" class="form-control" type="text"
+                                                    value="{{deals.pname}}">
+                                                    {{#each shopprod}}
+                                                    <option>{{name}}</option>
+                                                    {{/each}}
+                                                </select>
+                                                <br>
+                                            </div> --}}
+                                            <div class="billing-info mb-20">
+                                                <label for="name">Product Name</label>
+                                                <input id="pname" name="pname" class="form-control" type="text"
+                                                    value="Altered Pants" readonly>
+                                            </div>
+                                            <br>
+                                            <div class="billing-info mb-20">
+                                                <label for="name">Discounted Price ($)</label>
+                                                <input id="discountp" name="discountp" class="form-control" type="text"
+                                                    value="{{deals.discountp}}">
+                                            </div>
+                                            <br>
+                                            <div class="billing-info mb-20">
+                                                <label for="name">Start Date</label>
+                                                <input id="datepicker" name="dstartdate" class="form-control"
+                                                    type="text" value="{{formatDate deals.dstartdate 'DD/MM/YYYY'}}">
+                                            </div>
+                                            <br>
+                                            <div class="billing-info mb-20">
+                                                <label for="name">End Date</label>
+                                                <input id="datepicker2" name="dexpirydate" class="form-control"
+                                                    type="text" value="{{formatDate deals.dexpirydate 'DD/MM/YYYY'}}">
+                                            </div>
+                                            <br>
+                                            <div class="button-box">
+                                                <button type="submit" class="btn btn-outline-info"
+                                                    style="font-size: 14px; font-weight: 420; padding-top: 8px; padding-bottom: 8px;padding-left: 28px; padding-right: 28px"><span>Confirm</span></button>
+                                            </div>
+                                        </form>
                                     </div>
-
-                                    <div class="form-group">
-                                        <label for="name">Discounted Price ($)</label>
-                                        <input id="discountp" name="discountp" class="form-control" type="text" value="{{deals.discountp}}" >
-                                    </div>
-                                    
-                                    <div class="form-group">
-                                        <label for="name">Original Price ($)</label>
-                                        <input id="originalp" name="originalp" class="form-control" type="text" value="{{deals.originalp}}" >
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label for="name">Start Date (DD/MM/YYYY)</label>
-                                        <input id="dstartdate" name="dstartdate" class="form-control" type="text" value="{{deals.dstartdate}}" >
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label for="name">End Date (DD/MM/YYYY)</label>
-                                        <input id="dexpirydate" name="dexpirydate" class="form-control" type="text" value="{{deals.dexpirydate}}" >
-                                    </div>
-
-                                    <div class="button-box">
-                                        <button type="submit"><span>Confirm</span></button>
-                                    </div>
-                                </form>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -49,3 +71,15 @@
         </div>
     </div>
 </div>
+<script>
+    $('#datepicker').datepicker({
+        format: 'dd/mm/yyyy',
+        //value: new Date().toLocaleDateString('EN-SG'),
+        uiLibrary: 'bootstrap4',
+    });
+    $('#datepicker2').datepicker({
+        format: 'dd/mm/yyyy',
+        //value: new Date().toLocaleDateString('EN-SG'),
+        uiLibrary: 'bootstrap4',
+    });
+</script>
